a bit more in rel work

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -119,11 +119,16 @@ Based upon the data integration needs revealed by people in the interviews, and 
 
 \section{Related Work}
 
-In this section, we touch on motivating work for DataPalette from three fields: peronal information management, database integration, and end-user mashups and toolkits.
+In this section, we touch on motivating work for DataPalette from three fields: database integration, peronal information management, and end-user mashups and toolkits.
 
-First, 
+The primary motivation for this work stems from field studies in personal information management, where data integration has been a major recurring theme.  The problem of data fragmentation, for example, defined by Jones et al \cite{jones-fragmentation}, stems from a failure of current PIM practices to support effective consolidation of data from multiple sources.  In our own study, (reference anonymised) we observed several manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) that people devised to manage data when they came from multiple sources -- be them online, offline, or from other people.  Similar findings from other studies include Voida et al.'s observations of volunteer coordinators' ``homebrew databases'', manually-mainted information assemblages concocted to handle the widely varied and heterogeneous data collection requirements such groups needed to coordinate tehir activities \cite{voida-homebrew}. %% TODO MORE HERE
 
-Data integration has been a major recurring theme in the literature of personal information management.  The problem of data fragmentation, for example, defined by Jones et al \cite{jones}, can be seen as as an inability failure of current PIM practices to support effective consolidation of data from multiple sources.  In our own study, (reference anonymised) we observed the manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions)  devised to manage and updating data from external sources.  Similar observations have been made in others' studies, such as Voida et al.'s findings concerning volunteer coordinators' ``homebrew databases'', manually-mainted information assemblages that were concocted to meet data integration needs in the absence of tools with suitable capabilities.
+In order for PIM tools to start to support integration of arbitrary external data, we consulted the database ``data integration'' a transient 
+
+\begin{quote} 
+[The problem stems from the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model
+overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature ?people think differently from one another even when faced with  the same modeling goal. \cite{alonhalevy}
+\end{quote}
 
 A number of research PIM systems have been devised to solve this problem. 
 
