related work etc

--- a/carpedata.bib
+++ b/carpedata.bib
@@ -18,3 +18,99 @@
     title = {{A Platform for Personal Information Management and Integration}},
     year = {2005}
 }
+@misc{haystack,
+    abstract = {{The Resource Definition Framework (RDF) is designed to support
+agent communication on the Web, but it is also suitable as a
+framework for modeling and storing individual users'
+information. By using RDF in this manner, our Haystack platform
+provides information management capabilities personalized to
+individual users. This flexible semi-structured data model is
+appealing for several reasons. First, RDF supports ontologies
+created by the user and tailored to the user's needs. At the same
+time,...}},
+    author = {Huynh, D. and Karger, D. and Quan, D.},
+    citeulike-article-id = {326807},
+    citeulike-linkout-0 = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.19.846},
+    keywords = {knowledge, kr, rdf, representation},
+    posted-at = {2006-11-06 16:34:37},
+    priority = {0},
+    title = {{Haystack: A Platform for Creating, Organizing and Visualizing In-formation Using RDF}},
+    url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.19.846},
+    year = {2002}
+}
+@inproceedings{semex,
+    address = {New York, NY, USA},
+    author = {Cai, Yuhan and Dong, Xin L. and Halevy, Alon and Liu, Jing M. and Madhavan, Jayant},
+    booktitle = {SIGMOD '05: Proceedings of the 2005 ACM SIGMOD international conference on Management of data},
+    citeulike-article-id = {318989},
+    citeulike-linkout-0 = {http://portal.acm.org/citation.cfm?id=1066289},
+    citeulike-linkout-1 = {http://dx.doi.org/10.1145/1066157.1066289},
+    doi = {10.1145/1066157.1066289},
+    isbn = {1595930604},
+    keywords = {info-management, multiplatform, pim, tool-support},
+    pages = {921--923},
+    posted-at = {2005-10-11 23:07:48},
+    priority = {5},
+    publisher = {ACM Press},
+    title = {{Personal information management with SEMEX}},
+    url = {http://dx.doi.org/10.1145/1066157.1066289},
+    year = {2005}
+}
+
+
+@MISC{Jones05towardsa,
+    author = {William Jones and David Karger and Ofer Bergman and Mike Franklin and A Pratt and Marcia Bates},
+    title = {Towards a unification and integration of PIM support},
+    year = {2005}
+}
+
+@inproceedings{bergman,
+ author = {Bergman, Ofer and Beyth-Marom, Ruth and Nachmias, Rafi},
+ title = {The project fragmentation problem in personal information management},
+ booktitle = {Proceedings of the SIGCHI conference on Human Factors in computing systems},
+ series = {CHI '06},
+ year = {2006},
+ isbn = {1-59593-372-7},
+ location = {Montr\&\#233;al, Qu\&\#233;bec, Canada},
+ pages = {271--274},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1124772.1124813},
+ doi = {http://doi.acm.org/10.1145/1124772.1124813},
+ acmid = {1124813},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {documents, email, favorites, folder hierarchies, fragmentation, integration, personal information management, projects},
+}
+
+@inproceedings{boardmansasse,
+ author = {Boardman, Richard and Sasse, M. Angela},
+ title = {Stuff goes into the computer and doesn't come out: a cross-tool study of personal information management},
+ booktitle = {Proc. CHI '04},
+ publisher = {ACM Press},
+ year = {2004},
+}
+@INPROCEEDINGS{boardman,
+    author = {Richard Boardman and Robert Spence and M. Angela Sasse},
+    title = {Too Many Hierarchies? The Daily Struggle for Control of the Workspace},
+    booktitle = {Mathematical Models”, Proceedings of the ACM CHI’96 Conference},
+    year = {2003},
+    pages = {406--412},
+    publisher = {ACM Press}
+}
+@inproceedings{Voida:2011:HDC:1978942.1979078,
+ author = {Voida, Amy and Harmon, Ellie and Al-Ani, Ban},
+ title = {Homebrew databases: complexities of everyday information management in nonprofit organizations},
+ booktitle = {Proceedings of the 2011 annual conference on Human factors in computing systems},
+ series = {CHI '11},
+ year = {2011},
+ isbn = {978-1-4503-0228-9},
+ location = {Vancouver, BC, Canada},
+ pages = {915--924},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1978942.1979078},
+ doi = {10.1145/1978942.1979078},
+ acmid = {1979078},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {NPO, homebrew databases, information management, nonprofit, volunteer coordination, volunteer management.},
+}
