--- a/chi2012.tex
+++ b/chi2012.tex
@@ -115,22 +115,31 @@ While a primary goal of opening up such direct access to information is the hope
 
 If PIM tools were extended to enable end-users to make effective use of the emerging ecosystem of personal data, how would this impact personal information practice? This paper presents our initial results towards answering this question through a multi-method investigation of the personal data integration problem.  We start with a small interview study examining information tasks people perform that rely on multiple sources of information, and how such needs are currently satisfied.  Our results suggest that people prefer to rely upon multiple, diverse sources to singular integrated ones for a number of reasons, including coverage, reliability, and seeking out more suitable alternatives.  Second, we conduct a analysis of various popular personal data sources available today to identify barriers to effective unification of data from each.  We draw upon definitions and work from the database integration systems literature to characterise types of heterogeneity exhibited across data sources in three popular domains: social networking, shopping, and dining, finding that terminological heterogeneity dominates the simpler data feeds (including social networking and restaurant recommendations), while structural issues pervade the more complex schemas of online retailers' product catalogues.
 
-Based upon the data integration needs revealed by people in the interviews, and the kinds of heterogeneity observed in the data feeds, we embarked on a user-centric design exercise towards an interface to facilitate simple, ``light-touch'' integration tasks of diverse, heterogeneous data sources.  We describe our initial foray into this exercise, an interface we call DataPalette, which focuses on the most common types of heterogeneity to enable serendipitous ``data mixing'' - a form of simple integration sufficient to let people easily and effectively combine and compare information sources without the need to write code.  Our usability evaluation of Data Palette reveals that most users were comfortable with and that this interface is effectively expedites the most sophisticated of the typical kinds of ``data integration'' tasks people need to perform while planning personal,
+Based upon the data integration needs revealed by people in the interviews, and the kinds of heterogeneity observed in the data feeds, we embarked on a user-centric design exercise towards an interface to facilitate simple, ``light-touch'' integration tasks of diverse, heterogeneous data sources.  We describe our initial foray into this exercise, an interface we call DataPalette, which focuses on the most common types of heterogeneity to enable serendipitous ``data mixing'' - a form of simple integration sufficient to let people easily and effectively combine and compare information sources without the need to write code.  Our usability evaluation of DataPalette reveals that most users were comfortable with and that this interface is effectively expedites the most sophisticated of the typical kinds of ``data integration'' tasks people need to perform while planning personal,
 
-\section{Related Work}
+\section{Background}
 
 In this section, we touch on motivating work for DataPalette from three fields: database integration, peronal information management, and end-user mashups and toolkits.
 
-The primary motivation for this work stems from field studies in personal information management, where data integration has been a major recurring theme.  The problem of data fragmentation, for example, defined by Jones et al \cite{jones-fragmentation}, stems from a failure of current PIM practices to support effective consolidation of data from multiple sources.  In our own study, (reference anonymised) we observed several manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) that people devised to manage data when they came from multiple sources -- be them online, offline, or from other people.  Similar findings from other studies include Voida et al.'s observations of volunteer coordinators' ``homebrew databases'', manually-mainted information assemblages concocted to handle the widely varied and heterogeneous data collection requirements such groups needed to coordinate tehir activities \cite{voida-homebrew}. %% TODO MORE HERE
+The primary motivation for this work stems from field studies in personal information management, where effectively consolidating and
+combining data from multiple sources has been a major recurring theme. The problem of data fragmentation (\cite{Jones05towardsa}, for example, arises, in part, from a failure of PIM tools to adequately support the effective consolidation of data across multiple applications, services and platforms (e.g., \cite{bergman},  \cite{boardmansasse}). In our own previous field study, (reference anonymised) we observed several different variations of manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) that people devised to merge in data from external sources -- be them online, offline, or other people.  Similar findings from other studies include Voida et al.'s observations of volunteer coordinators' ``homebrew databases'', manually-mainted information assemblages concocted to handle the widely varied and heterogeneous data collection requirements such groups needed to coordinate their activities \cite{Voida:2011:HDC:1978942.1979078}. 
+%% TODO MORE HERE
 
-In order for PIM tools to start to support integration of arbitrary external data, we consulted the database ``data integration'' a transient 
+%% don't like the beginning of this > 
+It became clear that effectively coping with data heterogeneity would be a central focus to letting people effectively draw upon multiple, arbitrary sources of data when consulting the theoretical data integration literature. Alon Halvey describes hetereogeneity as an inevitable by-product of the distributed processes that are used to author it:
 
 \begin{quote} 
-[The problem stems from the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model
-overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature ?people think differently from one another even when faced with  the same modeling goal. \cite{alonhalevy}
+[The problem stems from the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature ?people think differently from one another even when faced with  the same modeling goal. \cite{alonhalevy}
 \end{quote}
 
-A number of research PIM systems have been devised to solve this problem. 
+In this paper, we take the position that there needs to be a difference in focus between the data integration approaches discussed in the databases literature and that of PIM, because of corresponding differences in requirements.  In database systems, the overall objective is usually to allow multiple large databases to be accessed as if one.
+This requires essentially full mapping of all data types and objects and well-defined semantics concerning where and how data gets converted.  The upfront costs of such complete integration are typically high, but are typically justified in the long-term, high-volume use cases imagined. In typical sensemaking scenarios of PIM, however, people might need to combine information from multiple sources for a one-off task; meaning that any upfront cost would be
+fully consume the time and effort a person has allocated for their task.  Moreover, while a fullly, uniform query capability might be nice, such capability is likely of less overall importance for a single quick task than simply being able to quickly and easily identify and cope with differences.
+
+A number of prototype PIM systems have demonstrated the kinds of
+capabilities that effective management of data heterogeneity can provide for users. The SEMEX \cite{semex} and Haystack \cite{haystack} systems,
+
+The mash-up
 
 \section{Pre-study 1 - Understanding Heterogeneity for Everyday Tasks}
 \subsection{Method}
@@ -160,7 +169,7 @@ People said that they would like a website that could support the evolution of a
 
 \subsection{Prestudy 2 Summary of Findings}
 
-\section{WebBox Interface - Design of the Data Palette}
+\section{WebBox Interface - Design of the DataPalette}
 
 Design Goals, 
 	What are the problems observed needed to address
