Added paragraphs to background section

--- a/carpedata.bib
+++ b/carpedata.bib
@@ -1,4 +1,4 @@
-﻿@ARTICLE{user-subjective,
+@article{user-subjective,
     author = {Ofer Bergman and Ruth Beyth-marom and Rafi Nachmias},
     title = {The user-subjective approach to personal information management systems},
     journal = {Journal of the American Society for Information Science and Technology},
@@ -6,45 +6,17 @@
     volume = {54},
     pages = {872--878}
 }
-@inproceedings{semex,
-    author = {Dong, Xin and Halevy, Alon Y.},
-    booktitle = {Second Biennial Conference on Innovative Data Systems Reasearch (CIDR)},
-    citeulike-article-id = {6881714},
-    keywords = {2005, personal\_information\_management},
-    location = {Asilomar, CA, USA},
-    pages = {119--130},
-    posted-at = {2010-03-20 16:06:14},
-    priority = {2},
-    title = {{A Platform for Personal Information Management and Integration}},
-    year = {2005}
-}
+
 @misc{haystack,
-    abstract = {{The Resource Definition Framework (RDF) is designed to support
-agent communication on the Web, but it is also suitable as a
-framework for modeling and storing individual users'
-information. By using RDF in this manner, our Haystack platform
-provides information management capabilities personalized to
-individual users. This flexible semi-structured data model is
-appealing for several reasons. First, RDF supports ontologies
-created by the user and tailored to the user's needs. At the same
-time,...}},
     author = {Huynh, D. and Karger, D. and Quan, D.},
-    citeulike-article-id = {326807},
-    citeulike-linkout-0 = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.19.846},
-    keywords = {knowledge, kr, rdf, representation},
-    posted-at = {2006-11-06 16:34:37},
-    priority = {0},
     title = {{Haystack: A Platform for Creating, Organizing and Visualizing In-formation Using RDF}},
-    url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.19.846},
     year = {2002}
 }
+
 @inproceedings{semex,
     address = {New York, NY, USA},
     author = {Cai, Yuhan and Dong, Xin L. and Halevy, Alon and Liu, Jing M. and Madhavan, Jayant},
     booktitle = {SIGMOD '05: Proceedings of the 2005 ACM SIGMOD international conference on Management of data},
-    citeulike-article-id = {318989},
-    citeulike-linkout-0 = {http://portal.acm.org/citation.cfm?id=1066289},
-    citeulike-linkout-1 = {http://dx.doi.org/10.1145/1066157.1066289},
     doi = {10.1145/1066157.1066289},
     isbn = {1595930604},
     keywords = {info-management, multiplatform, pim, tool-support},
@@ -53,7 +25,6 @@ time,...}},
     priority = {5},
     publisher = {ACM Press},
     title = {{Personal information management with SEMEX}},
-    url = {http://dx.doi.org/10.1145/1066157.1066289},
     year = {2005}
 }
 
@@ -71,15 +42,12 @@ time,...}},
  series = {CHI '06},
  year = {2006},
  isbn = {1-59593-372-7},
- location = {Montr\&\#233;al, Qu\&\#233;bec, Canada},
+ location = {Montr\'{e}al, Qu\'{e}bec, Canada},
  pages = {271--274},
  numpages = {4},
- url = {http://doi.acm.org/10.1145/1124772.1124813},
- doi = {http://doi.acm.org/10.1145/1124772.1124813},
  acmid = {1124813},
  publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {documents, email, favorites, folder hierarchies, fragmentation, integration, personal information management, projects},
+ address = {New York, NY, USA}
 }
 
 @inproceedings{boardmansasse,
@@ -107,10 +75,84 @@ time,...}},
  location = {Vancouver, BC, Canada},
  pages = {915--924},
  numpages = {10},
- url = {http://doi.acm.org/10.1145/1978942.1979078},
  doi = {10.1145/1978942.1979078},
  acmid = {1979078},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {NPO, homebrew databases, information management, nonprofit, volunteer coordination, volunteer management.},
 }
+
+@article{euzenat2004api,
+ title={An API for ontology alignment},
+ author={Euzenat, J.},
+ journal={The Semantic Web--ISWC 2004},
+ pages={698--712},
+ year={2004},
+ publisher={Springer}
+}
+
+@article{doan2003learning,
+ title={Learning to match ontologies on the Semantic Web},
+ author={Doan, A.H. and Madhavan, J. and Dhamankar, R. and Domingos, P. and Halevy, A.},
+ journal={The VLDB Journal},
+ volume={12},
+ number={4},
+ pages={303--319},
+ year={2003},
+ publisher={Springer}
+}
+
+@article{castano2006matching,
+ title={Matching ontologies in open networked systems: Techniques and applications},
+ author={Castano, S. and Ferrara, A. and Montanelli, S.},
+ journal={Journal on Data Semantics V},
+ pages={25--63},
+ year={2006},
+ publisher={Springer}
+}
+
+@article{gu2003record,
+ title={{Record linkage: Current practice and future directions}},
+ author={Gu, L. and Baxter, R. and Vickers, D. and Rainsford, C.},
+ journal={CSIRO Mathematical and Information Sciences Technical Report},
+ volume={3},
+ pages={83},
+ year={2003}
+}
+
+@inproceedings{winkler1999state,
+ title={The state of record linkage and current research problems},
+ author={Winkler, W.E.},
+ booktitle={Statistical Research Division, US Census Bureau},
+ year={1999},
+ organization={Citeseer}
+}
+
+@article{fellegi1969theory,
+ title={A theory for record linkage},
+ author={Fellegi, I.P. and Sunter, A.B.},
+ journal={Journal of the American Statistical Association},
+ pages={1183--1210},
+ year={1969},
+ publisher={JSTOR}
+}
+
+
+@article{borst1997construction,
+ title={Construction of engineering ontologies for knowledge sharing and reuse},
+ author={Borst, W.N.},
+ year={1997},
+ publisher={Universiteit Twente}
+}
+
+@article{suchanek2011paris,
+ title={PARIS: probabilistic alignment of relations, instances, and schema},
+ author={Suchanek, F.M. and Abiteboul, S. and Senellart, P.},
+ journal={Proceedings of the VLDB Endowment},
+ volume={5},
+ number={3},
+ pages={157--168},
+ year={2011},
+ publisher={VLDB Endowment}
+}
+
