working on related work

--- a/carpedata.bib
+++ b/carpedata.bib
@@ -38,6 +38,7 @@ time,...}},
     url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.19.846},
     year = {2002}
 }
+
 @inproceedings{semex,
     address = {New York, NY, USA},
     author = {Cai, Yuhan and Dong, Xin L. and Halevy, Alon and Liu, Jing M. and Madhavan, Jayant},
@@ -114,3 +115,39 @@ time,...}},
  address = {New York, NY, USA},
  keywords = {NPO, homebrew databases, information management, nonprofit, volunteer coordination, volunteer management.},
 }
+@article{citeulike:3875264,
+    abstract = {{As more and more reusable structured data appears on the Web, casual users will want to take into their own hands the task of mashing up data rather than wait for mash-up sites to be built that address exactly their individually unique needs. In this paper, we present Potluck, a Web user interface that let\&\#x2019;s casual users\&\#x2014;those without programming skills and data modeling expertise\&\#x2014;mash up data themselves. Potluck is novel in its use of drag and drop for merging fields, its integration and extension of the faceted browsing paradigm for focusing on subsets of data to align, and its application of simultaneous editing for cleaning up data syntactically. Potluck also lets the user construct rich visualizations of data in-place as the user aligns and cleans up the data. This iterative process of integrating the data while constructing useful visualizations is desirable when the user is unfamiliar with the data at the beginning\&\#x2014;a common case\&\#x2014;and wishes to get immediate value out of the data without having to spend the overhead of completely and perfectly integrating the data first. A user study on Potluck indicated that it was usable and learnable, and elicited excitement from programmers who, even with their programming skills, previously had great difficulties performing data integration.}},
+    author = {Huynh, D. and Miller, R. and Karger, D.},
+    citeulike-article-id = {3875264},
+    citeulike-linkout-0 = {http://dx.doi.org/10.1016/j.websem.2008.09.005},
+    doi = {10.1016/j.websem.2008.09.005},
+    issn = {15708268},
+    journal = {Web Semantics: Science, Services and Agents on the World Wide Web},
+    keywords = {semantic, web\_20},
+    month = nov,
+    number = {4},
+    pages = {274--282},
+    posted-at = {2009-04-29 08:41:33},
+    priority = {2},
+    title = {{Potluck: Data mash-up tool for casual users}},
+    url = {http://dx.doi.org/10.1016/j.websem.2008.09.005},
+    volume = {6},
+    year = {2008}
+}
+@inproceedings{Dontcheva:2007:RCS:1294211.1294224,
+ author = {Dontcheva, Mira and Drucker, Steven M. and Salesin, David and Cohen, Michael F.},
+ title = {Relations, cards, and search templates: user-guided web data integration and layout},
+ booktitle = {Proceedings of the 20th annual ACM symposium on User interface software and technology},
+ series = {UIST '07},
+ year = {2007},
+ isbn = {978-1-59593-679-0},
+ location = {Newport, Rhode Island, USA},
+ pages = {61--70},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1294211.1294224},
+ doi = {10.1145/1294211.1294224},
+ acmid = {1294224},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {personalized web search, template-based representation, view and layout editing, web content extraction},
+} 
