--- a/chi2012.tex
+++ b/chi2012.tex
@@ -121,8 +121,7 @@ Based upon the data integration needs revealed by people in the interviews, and 
 
 In this section, we touch on motivating work for DataPalette from three fields: database integration, peronal information management, and end-user mashups and toolkits.
 
-The primary motivation for this work stems from field studies in personal information management, where effectively consolidating and
-combining data from multiple sources has been a major recurring theme. The problem of data fragmentation (\cite{Jones05towardsa}, for example, arises, in part, from a failure of PIM tools to adequately support the effective consolidation of data across multiple applications, services and platforms (e.g., \cite{bergman},  \cite{boardmansasse}). In our own previous field study, (reference anonymised) we observed several different variations of manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) that people devised to merge in data from external sources -- be them online, offline, or other people.  Similar findings from other studies include Voida et al.'s observations of volunteer coordinators' ``homebrew databases'', manually-mainted information assemblages concocted to handle the widely varied and heterogeneous data collection requirements such groups needed to coordinate their activities \cite{Voida:2011:HDC:1978942.1979078}. 
+The primary motivation for this work stems from field studies in personal information management, where letting users effectively consolidating and work with data from multiple sources has remained a challenge for over a decade. The problem of data fragmentation (\cite{Jones05towardsa}, for example, arises, in part, from a failure of PIM tools to adequately support the effective consolidation of data across multiple applications, services and platforms (e.g., \cite{bergman}, \cite{boardmansasse}). In our own previous field study, (reference anonymised) we observed several different variations of manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) that people devised to merge in data from external sources -- be them online, offline, or other people.  Similar findings from other studies include Voida et al.'s observations of volunteer coordinators' ``homebrew databases'', manually-mainted information assemblages concocted to handle the widely varied and heterogeneous data collection requirements such groups needed to coordinate their activities \cite{Voida:2011:HDC:1978942.1979078}.
 %% TODO MORE HERE
 
 %% don't like the beginning of this > 
@@ -132,25 +131,26 @@ It became clear that effectively coping with data heterogeneity would be a centr
 [The problem stems from the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature ?people think differently from one another even when faced with  the same modeling goal. \cite{alonhalevy}
 \end{quote}
 
-In this paper, we take the position that there needs to be a difference in focus between the data integration approaches discussed in the databases literature and that of PIM, because of corresponding differences in requirements.  In database systems, the overall objective is usually to allow multiple large databases to be accessed as if one.
-This requires essentially full mapping of all data types and objects and well-defined semantics concerning where and how data gets converted.  The upfront costs of such complete integration are typically high, but are typically justified in the long-term, high-volume use cases imagined. In typical sensemaking scenarios of PIM, however, people might need to combine information from multiple sources for a one-off task; meaning that any upfront cost would be
-fully consume the time and effort a person has allocated for their task.  Moreover, while a fullly, uniform query capability might be nice, such capability is likely of less overall importance for a single quick task than simply being able to quickly and easily identify and cope with differences.
+In this paper, we take the position that there needs to be a difference in focus between the data integration approaches discussed in the databases literature and that of PIM, because of corresponding differences in requirements.  In database systems, the overall objective is usually to allow multiple large databases to be accessed as if one. This requires essentially full mapping of all data types and objects and well-defined semantics concerning where and how data gets converted.  The upfront costs of such complete integration are typically high, but are typically justified in the long-term, high-volume use cases imagined. In typical sensemaking scenarios of PIM, however, people might need to combine information from multiple sources for a one-off task; meaning that any upfront cost would be
+fully consume the time and effort a person has allocated for their task.  Moreover, while a fully, uniform query capability might be nice, such capability is likely of less overall importance for a single quick task than simply being able to quickly and easily identify and cope with differences.
 
-A number of prototype PIM systems have demonstrated the kinds of
-capabilities that effective management of data heterogeneity can provide for users. The SEMEX \cite{semex} and Haystack \cite{haystack} systems,
+A number of prototype PIM systems have dmonstrated data integration capacities. For example, SEMEX \cite{semex} was a PIM environment that provided users a uniform query interface over the contents of their personal information environments, across heterogeneous files, folders and repositories.  Similarly, Haystack was a personal information manager that allowed users to manipulate and managing their data in a uniform, consolidated manner \cite{haystack}. Pertaining to each system's ability to integrate information from arbitrary new data sources, however, both systems generally required new sources to either already conform to a pre-specified set of ontologies, or have the user provide a manual specify such a mapping translation themselves. 
 
-The mash-up
+Systems that have focused solely on the end-user-driven, interactive reconciliation of data heterogeneity have come out of the web ``data mash-up'' community.  Yahoo Pipes! is a visual programming language aimed at letting novice programmers easily create data-transformation workflows, but remained rather difficult to use and poorly suited for one-off information tasks.  Mash-up makers such as Intel Mashmaker \cite{}, QDEWiki, and TX2
+
+DataPalette's approach is most directly inspired by ``lightweight'' visual, user-interactive data collection, consolidation and alignment tools such as Potluck \cite{citeulike:3875264} and Cards \cite{Dontcheva:2007:RCS:1294211.1294224}.
 
 \section{Pre-study 1 - Understanding Heterogeneity for Everyday Tasks}
 \subsection{Method}
 Our pre-study investigated the types of tasks people perform online that required heterogeneous data sources, and which tools they would use to organise a large social event involving 15 or more people.  We interviewed 8 participants, using a general interview guide approach based loosely on a set of questions (see Appendix ?).  This approach allowed both the participant and interviewer a degree of freedom in conversation and each interview could adapt to the participant’s experiences, while collecting the same general areas of information.  Each interview was recorded and notes taken, the interviewer was trained so that they were knowledgeable about the importance of the study and to minimise bias.
+
 \subsection{Results and Discussion}
 The participant demographic consisted of 8 people, 7 of which were male and 1 female.  They were split evenly into two age groups of 18-25 and 26-32.  All but one participant used social network sites very regularly, and they either logged in multiple times a day, left a website page open or used dedicated application for their social networking site’s updates.  Those that used social networking websites primarily use Facebook.  All of the participants used Twitter to listen to broadcasted tweets, and 6 out of 8 people regularly tweeted. 
 
-Question 1: Tasks
+\subsubsection{Question 1: Tasks}
 All participants had experience in using multiple websites to complete tasks.  They listed example tasks such as shopping (including food, consumer electronics, hotels and flights), searching for jobs, choosing recipes, study and work.  The biggest focus for shopping focused tasks was balancing price, quality and speed of delivery.  In general, people did not not trust a single websites for reviews because they said that they could be biased and did not always review the features they were interested in.  One participant said that video reviews of items were really important because they showed the aesthetics and scale of the item.  In general for initial research into organising a task it was typical to Google keywords to find related websites to their tasks.  They identified that they used different website for different jobs, such as manufacturers website for technical details, review aggregators for a range of opinions, and Google maps for location based decisions.  Social networks were also identified to have different functions, such as different groups of people belong to each and share different types of opinions.  One participant said that they shared their outlook and gmail calendars, but only for work events and did not record social activities on them.
 
-Question 2: Large Social Event
+\subsubsection{Question 2: Large Social Event}
 All of the participants would organise a large social event by talking to their friends, about their ideas, preferences and recommendations.  The tools they would use to acquire this information included face-to-face, phone calls, email, Skype, Facebook events.  The method chosen depended on the time scale required to organise an event, in general if there was a short time scale people would speak in person or on the phone.  Otherwise, people would set up a FaceBook event page to discuss ideas with their friends.  If their friends were not on Facebook they would email them.  All but one participant said they would not use Doddle to organise day and time of an event, because they felt that people did not fill in the form and it was more suit to organising work event not social.  
 
 Most people felt that being assertive and posting their decisions about the date and time on Facebook meant that organising events were more successful than trying to gather a consensus.  They expected that their friends would voice any objections if they could not attend or like the restaurant or activity selected.   They selected venues, locations, restaurants and activities based on their own knowledge, friend’s recommendations, Google maps, reviews through Googling and review sites such as tripadvisor.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web.  One participant organised carpools informally and at last minute via Facebook or text messages.
